fix wrong width in all sections

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -9,5 +9,5 @@
   background-repeat: no-repeat;
   background-size: 867px 637px;
   height: 890px;
-  width: 100vw;
+  width: 100%;
 }
