--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,7 @@
   padding-top: 60px;
   padding-bottom: 40px;
   min-height: 350px;
-  width: 100vw;
+  width: 100%;
   background-color: #000;
   color: white;
 }
